# neolibc-interface

./: .gitignore  LICENSE  README.md  meson.build  neolibc-interface.code-workspace
include/: alloc.h  types.h
src/: alloc.c
